kotlin/semlang-parser/src/test/semlang/validatorTests/fail/nameCollision4.sem

struct Baz.Adapter {
  a: Integer
}

interface Baz {
  b(): Integer
}
